--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.5.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "firebase": "^4.10.1",
     "mongoose": "^5.0.5",
+    "nodemon": "^1.11.0",
     "react-router-dom": "^4.2.2"
   }
 }
